# pic-aggregates-loader

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
db/: monthly_base.sql  weekly_base.sql
src/aggregates_loader/: __main__.py  date_helpers.py  timeframe.py
src/aggregates_loader/model/: __init__.py  aggregate_base.py  base.py  base_data.py  entity.py
src/aggregates_loader/persistence/: __init__.py  source.py  target.py
src/aggregates_loader/queries/: __init__.py  aggregate_base.py  base.py  winsorized_returns.py
